CSS/index.css
.page-header{
    font-size: 120px;;
}

.container1{
    /*background: url(/Images/NeutralBackground02.jpg);*/
    /*background-color: #dfd4c1;*/
    background-color: #14181A;
    background-size: cover;
    height: 100vh;
    padding-top: 120px;
}


/*.img-container{
    display: flex;
    flex-direction: row;
    height: 100vh;
    border: 3px solid salmon;
    justify-content:center;
    text-align: center;
    width: 100%;
    background-size: cover;
}*/
.welcome-page{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    color:aliceblue;
    border: 7px solid rgb(136, 117, 91);
    margin: 0px 60px 20px;
    height: 80%;


}
/*Button sends user to section 2 of main homepage*/
.web-tabs {
    margin-left: 700px;
    margin-right: 700px;
    padding: 15px 1px;
    font-size: 16px;
    background-color: #B4AEA2;
    border-color: #c2a163;
    border-radius: 20px 20px 20px 20px;
    color: #14181A;
    cursor: pointer; 
}

.container2{
    min-height: 100vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    background-color: #F4F4F4;
}

.web-tab{
    width: 500px;
    background-color: #F4F4F4; 
    border-radius: 100px 100px 0px 0px;
    overflow: hidden;
    margin: 3rem;
    box-shadow: 0 4px 15px rgba(0,0,0,0.4);
    transition: transform 0.3s ease;
    text-align: center;
    
}

.web-tab:hover{
    transform: scale(1.03);
    border-radius: 10px 10px 0px 0px;
}


.web-tab img{
    width: 100%;
    /*height: fit-content;*/
    height: 300px;
    object-fit: cover;
}

.tab-info{  
    padding: 15px;
    background: white;
    color: orangered;
    min-height: fit-content ;
}


.tab-info p{
    font-size: 30px;
    font-weight: bold;
    font-style: italic;
    color: rgb(8, 12, 11);
    
}

.tab-info a{
    text-decoration: none;
    color: #14181A;
}

.tab-info button{
  padding: 10px 20px;
  background: #B4AEA2 ;
  border-radius: 20px;   
  border-color: #c2a163 ;
}


.tab-info button:hover{
    background: #14181A; ;
}

.tab-info button:hover a{
    color: #B4AEA2 ;
}

